fix: Downgrade react-dom to 18.2.0
The application was attempting to use react-dom v19.2.1, which is not compatible with the current dependencies. Downgrading to a stable version (18.2.0) resolves this issue and ensures proper functionality.

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "three": "0.161.0",
     "@mediapipe/hands": "0.4.1675469240",
     "@react-three/postprocessing": "2.16.0",
-    "react-dom": "^19.2.1"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
